# toy-file-system

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: tcp_buffer.h  tcp_utils.h
lib/: tcp_buffer.c  tcp_utils.c
step1/: BDC.c  BDS.c  CMakeLists.txt  Makefile
step2/: BDC_step2  BDS.c  BDS_step1  CMakeLists.txt  FC.c  FS.c  FS_GPT.c  Makefile
step2/include/: dir.h  diskop.h  inode.h  superblock.h
step2/src/: diskop.c  inode.c  superblock.c
step3/: FS.c
step3/include/: diskop.h  inode.h
step3/src/: inode.c
step4/: FC.c  FS.c  Makefile  test.c
